cambios en web view

--- a/webview2/app/src/main/res/layout/activity_main.xml
+++ b/webview2/app/src/main/res/layout/activity_main.xml
@@ -52,5 +52,6 @@
         app:layout_constraintStart_toStartOf="@+id/layoutMainActivity"
         app:layout_constraintEnd_toEndOf="@+id/layoutMainActivity"
         app:layout_constraintTop_toBottomOf="@+id/tVMsjCon"/>
+    <include layout="@layout/activity_splash"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
