--- a/webview2/app/src/main/res/layout/activity_splash.xml
+++ b/webview2/app/src/main/res/layout/activity_splash.xml
@@ -6,30 +6,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/SplashLayout"
     tools:context="com.gsolano.webview.SplashActivity"
-    android:background="@color/colorPrimary">
+    android:background="#CFCFCF">
 
     <!--<ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/ic_lineas"/>
-
+-->
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@mipmap/sfflogo1"/>
+
+
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:elevation="11dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_logoice"/>-->
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animation_view"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:lottie_fileName="animation.json"
-        app:lottie_loop="true"
-        app:lottie_autoPlay="false"/>
+        >
+    </ProgressBar>
 
 </RelativeLayout>
